@@ -36,11 +36,12 @@
 <div class="outline-text-3" id="text-org0d73f49">
 <ul class="org-ul">
 <li>Added some documentation about use of user data in the CSE thermos installation</li>
-<li>Switched to an azimuthal equidistant projection for connector creation
+<li>Switched to an azimuthal equidistant projection for connector creation.
 This should make the connectors more sensible</li>
 <li>Added a tool for introducing new connections into a problem</li>
 <li>Swapped the green colour (not in solution) for yellow</li>
 <li>Added colours to the selection info panel to act as a key to the map colours</li>
+<li>Added the necessary EU funding statement to the front page</li>
 </ul>
 </div>
 </div>
