@@ -48,7 +48,7 @@
 <li><a href="#org3a7baa3">1.6. Peak to base ratio</a></li>
 <li><a href="#org173db61">1.7. Heat price</a></li>
 <li><a href="#org36f1d7e">1.8. Connection cost</a></li>
-<li><a href="#org173b24b">1.9. <span class="todo TODO">TODO</span> Emissions factors</a></li>
+<li><a href="#orge00a7e1">1.9. <span class="todo TODO">TODO</span> Emissions factors</a></li>
 </ul>
 </li>
 <li><a href="#org6dabf1f">2. Facts about pipes</a>
@@ -65,7 +65,7 @@
 <li><a href="#orgba18e61">3.3. Capacity cost</a></li>
 <li><a href="#orgca52ad3">3.4. Annual cost</a></li>
 <li><a href="#org54ee262">3.5. Supply cost</a></li>
-<li><a href="#orge00a7e1">3.6. Emissions factors</a></li>
+<li><a href="#org548bb94">3.6. Emissions factors</a></li>
 </ul>
 </li>
 <li><a href="#orgcf22e13">4. Financial parameters</a>
@@ -243,8 +243,8 @@ It can also be edited for each building in the <a href="networks.html">network e
 </div>
 </div>
 
-<div id="outline-container-org173b24b" class="outline-3">
-<h3 id="org173b24b"><span class="section-number-3">1.9</span> <span class="todo TODO">TODO</span> Emissions factors</h3>
+<div id="outline-container-orge00a7e1" class="outline-3">
+<h3 id="orge00a7e1"><span class="section-number-3">1.9</span> <span class="todo TODO">TODO</span> Emissions factors</h3>
 </div>
 </div>
 
@@ -515,8 +515,8 @@ The supply cost is the net cost of producing heat to put into the network. If th
 </div>
 </div>
 
-<div id="outline-container-orge00a7e1" class="outline-3">
-<h3 id="orge00a7e1"><span class="section-number-3">3.6</span> Emissions factors</h3>
+<div id="outline-container-org548bb94" class="outline-3">
+<h3 id="org548bb94"><span class="section-number-3">3.6</span> Emissions factors</h3>
 <div class="outline-text-3" id="text-3-6">
 <p>
 Supply emissions factors are the emissions factors associated with producing a unit of heat to put into the network.
